# ConstitutiveRelationships

./: pyproject.toml
ConstitutiveRelationships/: __init__.py
ConstitutiveRelationships/Ejemplos/: A36_law.xlsx  fc240_UC_law.xlsx  libraryExample.ipynb  steelExample.ipynb  unconfinedConcreteExample.ipynb
ConstitutiveRelationships/materials/: __init__.py  uniaxialConfinedConcrete.py  uniaxialSakitoSun.py
src/ConstitutiveRelationships/: __init__.py
src/ConstitutiveRelationships/materials/: __init__.py  uniaxialBilinealSteel.py  uniaxialUnconfinedConcrete.py
src/Ejemplos/: fc240_UC_law.csv  fc240_UC_law.xlsx  multipleMaterialExample.ipynb
