[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ConstitutiveRelationships"
version = "0.1.0"
description = "Uniaxial constitutive models for steel and concrete (APE Ingeniería)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nicolás Mora Bowen", email = "nmorabowen@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
include = ["ConstitutiveRelationships", "ConstitutiveRelationships.*"]

[project.urls]
Homepage = "https://github.com/nmorabowen/ConstitutiveRelationships"
Issues = "https://github.com/nmorabowen/ConstitutiveRelationships/issues"
