[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ConstitutiveRelationships"
version = "0.1.0"
description = "Material Laws examples - Ladruño4ever"
readme = "README.md"
authors = [
    {name = "Nicolas Mora Bowen", email = "nmorabowen@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "openseespy",
    "pandas",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/nmorabowen/ConstitutiveRelationships"
"Bug Tracker" = "https://github.com/nmorabowen/ConstitutiveRelationships/apeSees"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}} 

[tool.setuptools.package-data]
"*" = ["*.ipynb"]